DMP-4800: Remove all instances Eager Loading with Lazy Loading within Darts-API (#2871)